Implemented home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="h-full w-full flex flex-col">
+    <div class="h-[100%]">
+        <app-image-auto-carrousel/>
+    </div>
+    <div class="flex flex-1 min-h-[25%] items-center justify-center">
+    <button class="stitched"
+        routerLink="/products"
+    >
+        Ver produtos
+    </button>
+    </div>
+</div>
