--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="h-dvh w-dvw flex flex-col">
   <picture class="max-h-[100px] p-[10px] bg-[#51a2ff]">
-    <img class="h-full justify-self-center" src="/assets/images/logo.png" alt="Logo" >
+    <img class="h-full justify-self-center" src="assets/images/logo.png" alt="Logo" >
   </picture>
-  <div class="flex-1 p-[5px]">
+  <div class="flex-1 px-[5px] overflow-auto" >
       <router-outlet></router-outlet>
   </div>
   <app-bottom-nav></app-bottom-nav>
