Implemented cart and added images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="h-dvh w-dvw flex flex-col">
   <picture class="max-h-[100px] p-[10px] bg-[#51a2ff]">
-    <img class="h-full justify-self-center" src="assets/images/logo.png" alt="Logo" >
+    <img class="h-full justify-self-center" src="assets/images/logo_white.png" alt="Logo" >
   </picture>
   <div class="flex-1 px-[5px] overflow-auto" >
       <router-outlet></router-outlet>
