--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="h-[100%]">
         <app-image-auto-carrousel/>
     </div>
-    <div class="flex flex-1 min-h-[25%] items-center justify-center">
+    <div class="flex flex-1 min-h-[25%] items-center pb-[12.5%] justify-center">
     <button class="stitched"
         routerLink="/products"
     >
