--- a/src/app/components/home/image-auto-carrousel/image-auto-carrousel.component.html
+++ b/src/app/components/home/image-auto-carrousel/image-auto-carrousel.component.html
@@ -1,5 +1,5 @@
-<div class="h-full w-full py-[20px]">
-    <owl-carousel-o [options]="customOptions" class="h-full flex rounded-3xl bg-[#51a2ff] stitched">
+<div class=" w-full py-[20px]">
+    <owl-carousel-o [options]="customOptions" class="max-h-[50dvh] flex rounded-3xl bg-[#51a2ff] stitched">
         @for (image of imagePaths; track $index) {
             <ng-template carouselSlide>
                 <div class="flex! h-full align-center justify-center">
