--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,1 +1,29 @@
-<p>cart works!</p>
+<div class="h-full w-full flex flex-col p-[10px] gap-[10px]">
+    <button (click)="openUserInfoModal()">To to checkout</button>
+    @for (item of cartStoreItems(); track $index) {
+        <div class="grid w-full py-[10px] px-[5px] grid-cols-2 outline rounded-md border-[#00397a]" >
+            <img [src]="item.product.imagePaths[0]" [alt]="item.product.name">
+            <div class="flex px-[10px] flex-col justify-between">
+                <div>
+                    <h3>{{item.product.name}}</h3>
+                    <p>{{item.product.price}}€</p>
+                </div>
+                <div class="flex items-center justify-center gap-[5px] px-[5px]">
+                    <button nz-button nzType="primary" nzShape="circle" nzShape="round" (click)="updateQuantity(item,subtract)">
+                        <nz-icon nzType="minus" />
+                    </button>
+
+                    <button nz-button nzType="primary" nzShape="circle" nzShape="round">
+                        {{item.quantity}}
+                    </button>
+
+                    <button nz-button nzType="primary" nzShape="circle" nzShape="round" (click)="updateQuantity(item,add)">
+                        <nz-icon nzType="plus" />
+                    </button>
+                </div>
+            </div>
+        </div>
+    } @empty {
+        Empty...
+    }
+</div>
