--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,8 @@
 
 }
 
+.ant-image-preview-img-wrapper {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
