--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -1,42 +1,61 @@
 .product-card {
-    display: grid;
-    grid-template-columns: 100% ;
-    gap:5px;
+    height: 50dvh;
+    width: 100%;
+    max-width: 800px;   
+    margin: 0 auto; 
 
-    .product-footer {
-        border: 3px solid white;
-        background-color: white;
-        border-radius: 10px;
+    .inside-container {
+        height: 100%;
         display: flex;
-        flex-direction: row;
-        padding: 0px 10px;
-        justify-content: space-between;
-        align-items: center;
-        
-        .info {
-            h3 {
-                margin: 0;
-                font-size: 2.0rem;
-                font-weight: 600;
-                color: #00397a;
-            }
+        flex-direction:column ;
+        gap:10px;
 
-            p {
-                margin: 0;
-                font-size: 1.0rem;
-                color: #00397a;
-            }
+        .image-selector {
+            flex-grow: 1;
         }
-
-        .add-btn {
-            background: #00397a;
-            border: none;
-            color: white;
-            padding: 8px 14px;
-            border: 1px solid white;
-            border-radius: 6px;
-            font-weight: 500;
-            cursor: pointer;
+        .product-footer {
+            border: 3px solid white;
+            background-color: white;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            padding: 0px 10px;
+            align-items: center;
+            max-width: 300px;
+            gap: 10px;
+            align-self: center;
+            
+            .info {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                gap: 20px;
+                
+                h3 {
+                    margin: 0;
+                    font-size: 1.5rem;
+                    font-weight: 600;
+                    color: #00397a;
+                }
+                
+                p {
+                    margin: 0;
+                    font-size: 1.0rem;
+                    color: #00397a;
+                }
+            }
+            
+            .add-btn {
+                background: #00397a;
+                border: none;
+                color: white;
+                padding: 8px 14px;
+                border: 1px solid white;
+                border-radius: 6px;
+                font-weight: 500;
+                cursor: pointer;
+            }
         }
     }
 }
