--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="h-full w-full flex flex-col gap-[5px] overflow-auto">
+<div class="h-full w-full flex flex-col gap-[5px] overflow-auto py-2">
     @for (product of products; track $index) {
         <app-product-card  [index]="$index" [product]="product"/>
     }
