--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <picture class="max-h-[100px] p-[10px] bg-[#51a2ff]">
     <img class="h-full justify-self-center" src="assets/images/logo_white.png" alt="Logo" >
   </picture>
-  <div class="flex-1 px-[5px] overflow-auto" >
+  <div class="flex-1 p-[5px] overflow-auto" >
       <router-outlet></router-outlet>
   </div>
   <app-bottom-nav></app-bottom-nav>
