--- a/src/app/common/image-slider/image-slider.component.html
+++ b/src/app/common/image-slider/image-slider.component.html
@@ -13,7 +13,7 @@
                 (click)="jumpToSlide($index)"
                 [class]="
                 'w-[20px] h-[20px] rounded-[50%] cursor-pointer inline-block mx-[5px] border transition-colors duration-500 ease-in-out' +
-                (currentSlide() === $index ? 'border-white bg-stone-700' : 'border-stone-700 bg-white')
+                (currentSlide() === $index ? 'border-white! bg-stone-700' : 'border-stone-700 bg-white')
                 "
                 ></div>
             }
